2013-07-12  Araki Ken  <arakiken@users.sf.net>

	* README, doc/ja/README.ja: Updated.

	* libptyssh/ml_pty_ssh.c:
	  SSH agent authentication and forwarding are supported.

2013-07-06  Araki Ken  <arakiken@users.sf.net>

	* ml_line_bidi.c: The cursor position in inserting RTL characters after
	  one LTR character (and vice versa) is fixed.
	  (There were no problem in inserting RTL characters after two or more
	  LTR characters.)

2013-06-30  Araki Ken  <arakiken@users.sf.net>

	* x_display.c: Minor fixes.

2013-06-30  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: DECALN(ESC#8) resets the screen margins.

	* x_display.c: Support for touch screen on NetBSD/OpenBSD is added.
	  (Experimental)

2013-06-30  Araki Ken  <arakiken@users.sf.net>

	* configure.in: configure error which --with-gui=xlib,fb option
	  causes is fixed.

	* version.h.in: 3.2.1 -> 3.2.1 post

2013-06-29  Araki Ken  <arakiken@users.sf.net>

	* 3.2.1 released.
	  (tag "rel-3_2_1")

	* configure.in, mlterm.spec, main/version.h.in,
	  doc/en/ReleaseNote: updated for 3.2.1.

	* man/mlterm.1, gtk/INSTALL, doc/ja/README.win32, doc/en/README.win32:
	  Updated.

2013-06-28  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* x_virtual_kbd.c: The trigger to start software keyboard is changed
	  from the click at the bottom of the screen to the double click at
	  the right bottom corner.

2013-06-27  Araki Ken  <arakiken@users.sf.net>

	* ml_edit.c:
	  The behavior of ml_edit_goto_beg_of_line(), ml_edit_copy_area()
	  and ml_edit_erase_area() in origin mode is fixed.

	* ml_vt100_parser.c, ml_edit.h, ml_screen.h:
	  Relative-origin position of the cursor is reported to CPR sequence.

2013-06-25  Araki Ken  <arakiken@users.sf.net>

	* x_display.c:
	  - The bug which leaves the cursor shape in the virtual keyboard
	    area is fixed.
	  - EV_ABS events are processed on Linux framebuffer.

	* x_virtual_kbd.c:
	  - x_is_virtual_kbd_event() is added.