@@ -477,10 +477,20 @@ ssh_connect(
 
 	if( strstr( userauthlist , "publickey"))
 	{
-		LIBSSH2_AGENT *  agent ;
 		char *  home ;
 		char *  p ;
+		LIBSSH2_AGENT *  agent ;
 
+	#if  defined(__CYGWIN__)
+		if( ! getenv( "SSH_AUTH_SOCK"))
+		{
+			/*
+			 * libssh2_agent_* functions instabilize libssh2 in cygwin, so
+			 * do nothing if SSH_AUTH_SOCK is not defined.
+			 */
+		}
+		else
+	#endif
 		if( ( agent = libssh2_agent_init( session->obj)))
 		{
 			if( libssh2_agent_connect( agent) == 0)
